Fix Navbar and Cards for Small Devices
Navbar is too large for smaller devices therefore is adjusted to fit
into smaller screen width. Added margin for cards to not look too
compact.

--- a/website/static/css/main.css
+++ b/website/static/css/main.css
@@ -6,6 +6,14 @@
   padding: 1rem 12rem;
 }
 
+@media (max-width: 575.98px) {
+  .nav-logo {
+    width: 40%;
+  }
+  .nav-container {
+    padding: 0 1rem;
+  }
+}
 html, body {
   height: 100%;
 }
@@ -90,6 +98,16 @@ html, body {
 }
 .content-wrapper .profile-pic {
   width: 5rem;
+}
+
+@media (max-width: 575.98px) {
+  .content-wrapper {
+    padding: 1rem 1rem;
+    margin: 0;
+  }
+  #quickInfo {
+    margin: 1rem auto;
+  }
 }
 
 /*# sourceMappingURL=main.css.map */
