--- a/website/static/scss/utilities/_variables.scss
+++ b/website/static/scss/utilities/_variables.scss
@@ -1,1 +1,3 @@
+// Responsive padding values
 $padding-sides: 12rem;
+$sm-padding-sides: 1rem;
